Refactor Pente for storing full EIP-1559 encoded rawTransaction data in info states (with ExtraData still)
Signed-off-by: Peter Broadhurst <peter.broadhurst@kaleido.io>